--- a/feuille de style contact.css
+++ b/feuille de style contact.css
@@ -18,12 +18,13 @@ p.scroller {
 	text-align: center;
 	/*margin-top: -1em;*/
 	padding-top: 0.5em;
-	color: black;
+	padding-bottom: 0.5em;
 }
 
 .en-tete img {
 	width: 14em;
 	height: 5em;
+	position: center;
 }
 
 body {
@@ -31,12 +32,19 @@ body {
 	background-color: white;
 	background-image: url(Data/background.jpg);
 	background-position: center center;
+	font-family: Medium, Eras ITC;
+	font-weight: bold;
+	color: #f8f8f8;
 }
 
-*{
-	margin: 0px;
-	padding: 0px;
-	font-family: Medium, Eras ITC;
+.en-tete {
+	color: black;
+	position: relative;
+}
+
+a {
+	text-decoration: none;
+	color: black;
 }
 
 nav{
@@ -116,105 +124,107 @@ nav li:hover{
 	font-size: 12px;
 }
 
-div.body{
-	text-align:center;
-	font-style: none;
-	font-weight: bold;
+*{
+	margin: 0px;
+	padding: 0px;
 	font-family: Medium, Eras ITC;
-	font-size: 30px;
-	padding-top: 75px;
 }
 
-.images {
-	display: flex;
-	width: 700px;
-	height: 520px;
-	animation-duration: 30s;
-	animation-name: mesImages;
-	animation-iteration-count: infinite;
-}
-#defile {
-	width: 680px;
-	height: 520px;
-	overflow: hidden;
-	border: 2px solid black;
-	margin-left: auto;
-	margin-right: auto;
+form {
+	background-color: #334650;
+	padding: 30px;
+	border-radius: 15px;
+	margin: 0px;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%,-50%);
+	margin-top: 4em;
 }
 
-@keyframes mesImages {
-	0% {
-		transform: translateX(0);
-	}
-	25% {
-		transform: translateX(-700px);
-	}
-	50% {
-		transform: translateX(-1400px);
-	}
-	75% {
-		transform: translateX(-2090px);
-	}
-	100% {
-		transform: translateX(0);
-	}
+form h1 {
+	font-size: 20px;
 }
 
-head {
+form .separation {
+	width: 100%;
+	height: 5px;
+	background-color: #83CCB4;
+	border-radius: 20px;
+}
+
+form .corps-formulaire {
 	display: flex;
 	flex-wrap: wrap;
+	margin-bottom: 30px;
 }
 
-a {
-	text-decoration: none;
-	color: black;
+form .corps-formulaire .groupe {
+	position: relative;
+	margin-top: 20px;
+	display: flex;
+	flex-direction: column;
 }
 
-.vds_titre {
-	text-align: center;
-	padding-top: 2em;
-	padding-bottom: 1em;
-}
-
-.vente_de_la_semaine h3 {
-	padding-top: 0.5em;
-	padding-bottom: 0.5em;
-	padding-left: 2em;
-}
-
-.grille {
-	max-width: 1300px;
-	width: 80%;
-	height: auto;
-	margin: 30px auto;
-	/*border: 1px solid #000;*/
-	display: grid;
-	grid-template-columns: repeat(auto-fill, 300px);
-	justify-content: center;
-	grid-gap: 25px;
-}
-
-.grid-item {
-	width: 300px;
-	height: 200px;
+form .corps-formulaire .gauche .groupe input {
+	margin-top: 5px;
+	padding: 10px 5px 10px 30px;
+	border: 2px solid #83CCB4;
+	outline: none;
 	border-radius: 10px;
-	padding-bottom: 2em;
-	text-align: center;
+}
+
+form .corps-formulaire .gauche .groupe i {
+	position: absolute;
+	left: 0;
+	top: 25px;
+	padding: 9px 8px;
+	color: #83CCB4;
+}
+
+form .corps-formulaire .droite {
+	margin-left: 40px;
+}
+
+form .corps-formulaire .droite .groupe {
+	height: 100%;
+}
+
+form .corps-formulaire .droite .groupe textarea {
+	margin-top: 5px;
+	padding: 10px;
+	background-color: #f8f8f8;
+	border: 2px solid #83CCB4;
+	outline: none;
+	border-radius: 10px;
+	resize: none;
+	height: 82%;
+}
+
+form .pied-formulaire button {
+	margin-top: 10px;
+	background-color: ;
+	color: ;
+	font-size: 15px;
+	border: none;
+	padding: 10px 20px;
+	border-radius: 10px;
+	outline: none;
+	cursor: pointer;
+	transition: transform 0.5s;
 	font-weight: bold;
 }
 
-
-.grille img {
-	border-radius: 10px;
-	border: 3px solid #334650;
+form .pied-formulaire button:hover {
+	transform: scale(1.05);
+		transition-duration: 1s;
+		background-color: #83CCB4;
 }
 
-.grille img:hover {
-	transition-duration: 1s;
-	transform: scale(1.1);
-	content: url('Data/grille/20230310_095507.jpg');
-	width: 300px;
-	height: 210px;
+@media screen and (max-width:920px) {
+	form .corps-formulaire .droite {
+		margin-left: 0px;
+	}
 }
 
 .pied_de_page {
@@ -224,6 +234,8 @@ a {
 	background-color: #334650;
 	color: white;
 	text-align: center;
+	position: absolute;
+	bottom: 0;
 }
 
 .pied_de_page h1 {
